# C-Game

./: ProjectDescription.docx  README.md
final/: CMakeLists.txt  Child.cpp  Child.h  Creature.cpp  Creature.h  HandlingErrors.cpp  HandlingErrors.h  MentalTraining.cpp  MentalTraining.h  Monster.cpp  Monster.h  PhysicalTraining.cpp  PhysicalTraining.h  RoarTraining.cpp  RoarTraining.h  Training.cpp  Training.h  main.cpp
